Fix plugin name alignment

--- a/app/assets/stylesheets/_content.css.scss
+++ b/app/assets/stylesheets/_content.css.scss
@@ -27,6 +27,7 @@ section.content {
       border-radius: 10px;
 
       h1 {
+        text-align: left;
         margin: 0;
         display: block;
         @include disable-link-decoration;
